# Shaniraq.kz

./: Dockerfile  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 56494012f2e6_add_total_comments.py  690401545fea_add_favorite_ads.py  c134e8529443_add_comments_table.py
app/: ads_repository.py  comments_repository.py  favorites_repository.py  main.py  users_repository.py
